notes/grammar.bnf
program → (declaration)* EOF ;

declaration → varDecl | statement ;

varDecl → "var" IDENTIFIER ("=" expression)? ";" ;

statement → forstatement | whilestatement | ifstatement | block | exprstatement | printstatement ;

forstatement → "for" "(" ( varDecl | exprstatement | ";" ) expression? ";" expression? ")" statement ;

whilestatement → "while" "(" expression ")" statement ;

ifstatement → "if" "(" expression ")" statement ("else" statement)? ;

block → "{" declaration "}" ;

exprstatement → expression ";" ;

printstatement → "print" expression ";" ;

expression → assignment ;

assignment → IDENTIFIER "=" assignment | logical_or ;

logical_or → logical_and ( "or" logical_and )* ;

logical_and → equality ( "and" equality )* ;

equality → comparison (("==" | "!=") comparison)* ;

comparison → term (( ">" | ">=" | "<" | "<=" ) term)* ;

term → factor (("-" | "+") factor)* ;

factor → unary (("*" | "/") unary)* ;

primary        → "true" | "false" | "nil" | NUMBER | STRING | "(" expression ")" | IDENTIFIER ;
